[gd_scene load_steps=8 format=3 uid="uid://nlpc516xkojm"]

[ext_resource type="Script" uid="uid://c3obywti5j7sq" path="res://game/journal.gd" id="1_7xp7q"]
[ext_resource type="PackedScene" uid="uid://jgtu27dq8c4k" path="res://game/journal_panel.tscn" id="2_7qoqf"]
[ext_resource type="Texture2D" uid="uid://cp1b7lsseyexj" path="res://ui/journal/journal_popup.png" id="2_d3tf2"]
[ext_resource type="AudioStream" uid="uid://t6lebqe54gtq" path="res://ui/journal/new_journal_entry.wav" id="3_oraf3"]

[sub_resource type="Animation" id="Animation_mpkxy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(48, 48)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-64, 0)]
}

[sub_resource type="Animation" id="Animation_d3tf2"]
resource_name = "popup_anim"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:size")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.97),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(48, 48), Vector2(52, 52)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.97),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-48, 0), Vector2(-52, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_31qdf"]
_data = {
&"RESET": SubResource("Animation_mpkxy"),
&"popup_anim": SubResource("Animation_d3tf2")
}

[node name="Journal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 528.0
offset_bottom = -280.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7xp7q")

[node name="ToastPanel" type="Control" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0
grow_vertical = 0

[node name="TextureRect" type="TextureRect" parent="ToastPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -64.0
offset_right = -16.0
offset_bottom = 48.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("2_d3tf2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="ToastPanel"]
libraries = {
&"": SubResource("AnimationLibrary_31qdf")
}
autoplay = "popup_anim"

[node name="Timer" type="Timer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -13.200001
anchor_right = 1.0
anchor_bottom = 8.0

[node name="JournalPanel" parent="CenterContainer" instance=ExtResource("2_7qoqf")]
unique_name_in_owner = true
layout_mode = 2

[node name="NewEntryPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_oraf3")
bus = &"effects"
